# hermes-pen-bridge

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  test_integration.py
hermes_pen_bridge/: server.py
pencil_mcp/: __init__.py  server.py
