[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-pen-bridge"
version = "0.1.0"
description = "Hermes-first MCP bridge for the Pencil design tool — proxies the bundled MCP server and adds .pen file utilities"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0"]
license = {text = "MIT"}
keywords = ["mcp", "hermes", "pencil", "design", "agent"]

[project.scripts]
hermes-pen-bridge = "hermes_pen_bridge.server:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_pen_bridge*"]
